# GhostwriterMath

./: CMakeLists.txt
